--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -76,6 +76,14 @@ tailwind.config = {
 
 <body class="font-display text-white">
 
+<!-- Loader -->
+<div id="loader" class="loader hidden">
+  <div class="loader-bg"></div>
+  <div class="loader-content">
+    <img src="./assets/img/logo.png" alt="4B Logo" class="loader-logo">
+  </div>
+</div>
+
 <!-- NAV -->
 <header class="fixed top-0 left-0 w-full p-6 z-50 flex justify-between">
   <div class="text-white/90 tracking-wide flex flex-col items-center justify-center">
