--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -3,10 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover,user-scalable=0" />
-
 <meta name="theme-color" content="#000000">
-<meta name="format-detection" content="telephone=no">
-<meta name="msapplication-tap-highlight" content="no">
 <meta name="description" content="4B by alibhtty">
 <title>HorarioTimes.js – 4B®</title>
 
@@ -159,7 +156,7 @@ tailwind.config = {
   <div class="flex flex-col gap-1">
     <div class="text-[9px] text-white font-mono tracking-widest uppercase flex items-center gap-2">
       <span class="w-1 h-1 bg-green-500 rounded-full"></span>
-      SERVER ON 4B AIR
+      SERVER ON 4B
     </div>
     <div class="text-[9px] text-white/50 font-mono">
       60FPS • <span class="text-primary">WEBGL</span> • <span class="text-primary">System Ready</span>
