--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -31,7 +31,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.jpg">
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png">
   <link rel="icon" href="assets/icons/192x192.png">
   <link rel="manifest" href="./manifest.json">
   <link rel="stylesheet" href="./assets/js/core.css">
