--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover,user-scalable=0" />
 <meta name="theme-color" content="#000000">
 <meta name="description" content="4B by alibhtty">
-<title>HorarioTimes.js – 4B®</title>
+<title>HorarioTimes.js</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,18 +16,18 @@
 <!-- Material Symbols -->
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
 
-<meta property="og:title" content="HT.js – 4Bdev®">
+<meta property="og:title" content="HorarioTimes.js – 4Bdev®">
   <meta property="og:description" content="4Bshop">
-  <meta property="og:image" content="https://4bshop.web.app/static/share.png">
+  <meta property="og:image" content="./assets/icons/share.jpg">
   <meta property="og:image:width" content="1500">
   <meta property="og:image:height" content="800">
   <meta property="og:site_name" content="4Bdev">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ali-bhtty.web.app">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="4Bdev – @ali.bhtty">
-  <meta name="twitter:description" content="Proyects 4B">
-  <meta name="twitter:image" content="https://4bshop.web.app/static/share.png">
+  <meta name="twitter:title" content="HorarioTimes.js 4Bdev®">
+  <meta name="twitter:description" content="El mejor widget para tu rutina.">
+  <meta name="twitter:image" content="./assets/icons/share.jpg">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -77,7 +77,7 @@ tailwind.config = {
 <div id="loader" class="loader hidden">
   <div class="loader-bg"></div>
   <div class="loader-content">
-    <img src="./assets/icons/apple-touch-icon.jpg" alt="4B Logo" class="loader-logo">
+    <img src="./assets/icons/192x192.png" alt="4B Logo" class="loader-logo">
   </div>
 </div>
 
@@ -91,7 +91,7 @@ tailwind.config = {
   <!-- <a href="" class="flex items-center justify-center">Timesburg</a> -->
   <a href="4b.html" class="group flex items-center justify-center p-0 rounded-full bg-white/15 hover:bg-white/20 transition-colors duration-300">
     <!-- <span class="material-symbols-outlined text-white/50 group-hover:text-primary bg-text-primary rounded-[26px] p-2 r-2 transition-colors" style="font-size: 24px; font-weight: 300;">view_in_ar</span> -->
-    <img class="material-symbols-outlined text-white/50 group-hover:text-primary bg-text-primary rounded-[26px] w-12 p-1 r-2 transition-colors" src="./assets/icons/192x192.png" alt="4B Logo" class="loader-logo">
+    <img class="material-symbols-outlined text-white/50 group-hover:text-primary bg-text-primary rounded-[26px] w-12 p-1 r-2 transition-colors" src="./assets/icons/ali.png" alt="4B Logo" class="loader-logo">
   </a>
 </header>
 
