--- a/timesburg/go/4b.html
+++ b/timesburg/go/4b.html
@@ -36,6 +36,9 @@
   <link rel="manifest" href="./manifest.json">
   <link rel="stylesheet" href="./assets/js/core.css">
 
+  <!-- <link rel="stylesheet" href="./assets/css/core.css">
+  <link rel="stylesheet" href="./assets/css/tw.css"> -->
+
 <!-- Tailwind Config -->
 <script id="tailwind-config">
         tailwind.config = {
@@ -43,7 +46,7 @@
             theme: {
                 extend: {
                     colors: {
-                        "primary": "#1b855b", //00bbc2
+                        "primary": "#00d681", //00bbc2. 1b855b.   00d681
                         "background-light": "#f1f2f4",
                         "background-dark": "#000000",
                         "surface-dark": "#0a0a0a",
@@ -106,7 +109,7 @@
 <!-- Ideally this would be a Canvas element. Here we simulate it with a high-end image and styling -->
 <div class="relative w-full h-full rounded-2xl overflow-visible flex items-center justify-center perspective-[1000px]">
 <!-- Simulated 3D Object Image -->
-<div class="w-[75%] h-[75%] bg-contain bg-center bg-no-repeat drop-shadow-2xl transition-transform duration-500 ease-out group-hover/widget:scale-105 group-active/widget:scale-95 group-active/widget:rotate-3" data-alt="Abstract dark glossy 3D geometric shape with teal rim lighting floating in a black void" style="background-image: url('./assets/icons/192x192.png'); filter: contrast(0.98) brightness(1.1);">
+<div class="w-[75%] h-[75%] bg-contain bg-center bg-no-repeat drop-shadow-2xl transition-transform duration-500 ease-out group-hover/widget:scale-105 group-active/widget:scale-95 group-active/widget:rotate-3" data-alt="Abstract dark glossy 3D geometric shape with teal rim lighting floating in a black void" style="background-image: url('./assets/icons/ali.png'); filter: contrast(0.98) brightness(1.1);">
 </div>
 <!-- Interactive HUD elements (Subtle) -->
 <!-- These simulate the 'widget' UI overlays that might appear in a 3D view -->
