--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -147,7 +147,7 @@ tailwind.config = {
 </main>
 
 <!-- FOOTER -->
-<div class="fixed bottom-0 left-0 w-full px-4 py-4 pb-[max(1rem,env(safe-area-inset-bottom))] flex justify-between items-end opacity-100 z-10 pointer-events-none">
+<div class="footer">
   <div class="flex flex-col gap-1">
     <div class="text-[9px] text-white font-mono tracking-widest uppercase flex items-center gap-2">
       <span class="w-1 h-1 bg-green-500 rounded-full"></span>
