--- a/timesburg/go/OF.html
+++ b/timesburg/go/OF.html
@@ -115,28 +115,12 @@ tailwind.config = {
     class="card-3d relative w-[82vmin] max-w-[460px] aspect-square rounded-[30px] glass no-select cursor-grab active:cursor-grabbing mb-12"> <!-- w-[78vmin] max-w-[420px] -->
 
     <!-- IMAGE -->
-     <div id="image-slider" class="relative w-full h-full overflow-hidden">
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover02.jpg" class="slider-img w-full h-full object-cover pointer-events-none active" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
-     
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover01.jpg" class="slider-img w-full h-full object-cover pointer-events-none" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
-     
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover00.jpg" class="slider-img w-full h-full object-cover pointer-events-none" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
-     </div>
-    <!-- <div class="absolute inset-0 rounded-[30px] overflow-hidden translate-z" id="image-slider">
+    <div class="absolute inset-0 rounded-[30px] overflow-hidden translate-z" id="image-slider"> <!-- translate-z-[40px] -->
       <img src="./assets/img/cover02.jpg" fetchpriority="high"
                 decoding="async" loading="eager" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8] active" />
       <img src="./assets/img/cover01.jpg" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8]" />
       <img src="./assets/img/cover02.jpg" class="slider-img w-full h-full object-cover pointer-events-none filter brightness-[1.2] contrast-[1.3] saturate-[.8]" />
-    </div> -->
+    </div>
 
     <!-- Holo layer -->
     <div class="holo absolute inset-0 rounded-[30px] pointer-events-none filter hue-rotate-[180deg]"></div>
@@ -258,6 +242,7 @@ tailwind.config = {
       </a>
     </div>
   </div>
+
 
 </body>
 </html>
