--- a/timesburg/go/code-in-widget.html
+++ b/timesburg/go/code-in-widget.html
@@ -115,21 +115,7 @@ tailwind.config = {
     class="card-3d relative w-[82vmin] max-w-[460px] aspect-square rounded-[30px] glass no-select cursor-grab active:cursor-grabbing mb-12"> <!-- w-[78vmin] max-w-[420px] -->
 
     <!-- IMAGE -->
-     <div id="image-slider" class="relative w-full h-full overflow-hidden">
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover02.jpg" class="slider-img w-full h-full object-cover pointer-events-none active" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
-     
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover01.jpg" class="slider-img w-full h-full object-cover pointer-events-none" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
-     
-       <div class="slide-container absolute inset-0">
-         <img src="./assets/img/cover00.jpg" class="slider-img w-full h-full object-cover pointer-events-none" />
-         <div class="pins-layer absolute inset-0"></div>
-       </div>
+     <div id="image-slider" class="absolute inset-0 rounded-[30px] overflow-hidden translate-z">
      </div>
     <!-- <div class="absolute inset-0 rounded-[30px] overflow-hidden translate-z" id="image-slider">
       <img src="./assets/img/cover02.jpg" fetchpriority="high"
@@ -258,6 +244,14 @@ tailwind.config = {
       </a>
     </div>
   </div>
+
+ <script type="module">
+  import { renderWidget } from './widget.js';
+
+  const slider = document.getElementById('image-slider');
+  slider.innerHTML = ''; // limpia cualquier contenido previo
+  slider.appendChild(renderWidget());
+</script>
 
 </body>
 </html>
