--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -119,7 +119,7 @@ tailwind.config = {
      <div id="image-slider" class="rounded-[28px] relative w-full h-full overflow-hidden">
        <div class="slide-container absolute inset-0">
          <img src="./assets/img/cover02.jpg"
-              class="slider-img w-full h-full object-cover pointer-events-none active" />
+              class="slider-img w-full h-full object-cover pointer-events-none active cover-image" />
          <div class="pins-layer absolute inset-0"></div>
        </div>
      </div>
