--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -99,7 +99,7 @@ tailwind.config = {
   </div>
 
   <!-- <a href="" class="flex items-center justify-center">Timesburg</a> -->
-  <a href="4b.html" class="group flex items-center justify-center p-0 rounded-full bg-white/15 hover:bg-[#00d681]/25 transition-colors duration-300 border border-[#00d681]/28">
+  <a href="https://ali-bhtty.web.app" class="group flex items-center justify-center p-0 rounded-full bg-white/15 hover:bg-[#00d681]/25 transition-colors duration-300 border border-[#00d681]/28"> <!-- 4b.html -->
     <!-- <span class="material-symbols-outlined text-white/50 group-hover:text-primary bg-text-primary rounded-[26px] p-2 r-2 transition-colors" style="font-size: 24px; font-weight: 300;">view_in_ar</span> -->
     <img class="material-symbols-outlined text-white/50 group-hover:text-primary bg-text-primary rounded-[28px] w-12 p-1 r-2 transition-colors loader-logo" src="./assets/icons/ali.png" alt="4B Logo">
   </a>
