--- a/timesburg/go/index.html
+++ b/timesburg/go/index.html
@@ -183,16 +183,16 @@ tailwind.config = {
   <div class="flex flex-col gap-1 footer-left">
     <div class="text-[9px] text-white font-mono tracking-widest uppercase flex items-center gap-2">
       <span class="w-1 h-1 bg-green-500 rounded-full"></span>
-      SERVER ON 4B
+      SERVER ON 4B®
     </div>
     <div class="text-[9px] text-white/50 font-mono">
       DB • <span class="text-primary">Realtime</span> <span class="text-primary">Run</span>
     </div>
     <div class="text-[9px] text-white/50 font-mono">
-      RENDER • <span class="text-primary">GLOC</span>  <!-- <span class="text-primary">System Ready</span> -->
+      RENDER • <span class="text-primary">CARDGLOCK</span>  <!-- <span class="text-primary">System Ready</span> -->
     </div>
     <div class="text-[9px] text-white/50 font-mono">
-      60FPS • <span class="text-primary">WEBGL</span> • <span class="text-primary">System Ready</span>
+      60FPS • <span class="text-primary">WEBGL</span> • <span class="text-primary">Jsx</span>
     </div>
   </div>
 
@@ -200,8 +200,8 @@ tailwind.config = {
   <div class="footer-pill">
   <span class="footer-pill-text">v3.4<br> Install <br>Scriptable</span>
 
-  <a href="#" class="footer-pill-btn">
-    Download
+  <a href="https://buy.stripe.com/bJe14meM634I7ig1Bu9Zm04" target="_blank" class="footer-pill-btn">
+    Pro Mode
   </a>
 </div>
 
